[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/particles/EnemyFire.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/actor/monsterAttacks/EnemyFireBall/EnemyFireBall.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.0
height = 0.0

[node name="EnemyFireBall" type="Area2D"]
scale = Vector2( 0.5, 0.5 )
collision_layer = 256
collision_mask = 133
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -7 )
shape = SubResource( 1 )

[node name="EnemyFire" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, -13 )

[connection signal="area_entered" from="." to="." method="_on_EnemyFireBall_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_EnemyFireBall_body_entered"]
